[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/dev_menu_screen/scripts/HBoxContainer.gd" type="Script" id=1]
[ext_resource path="res://fonts/PressStart2P.tres" type="DynamicFont" id=2]
[ext_resource path="res://screens/dev_menu_screen/scripts/dev_menu.gd" type="Script" id=3]
[ext_resource path="res://screens/shared_scenes/nav_bar/nav_bar.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 480.0
margin_bottom = 14.0

[node name="HBoxContainer" parent="VBoxContainer/NavBar" index="0"]
margin_bottom = 14.0

[node name="BackButton" parent="VBoxContainer/NavBar/HBoxContainer" index="0"]
margin_bottom = 14.0

[node name="MarginContainer" parent="VBoxContainer/NavBar/HBoxContainer" index="1"]
margin_bottom = 14.0

[node name="ScreenNameLabel" parent="VBoxContainer/NavBar/HBoxContainer/MarginContainer" index="0"]
margin_top = 2.0
margin_bottom = 14.0

[node name="MenuButton" parent="VBoxContainer/NavBar/HBoxContainer" index="2"]
margin_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 76.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Add Resources to Inventoy"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 460.0
margin_bottom = 38.0
script = ExtResource( 1 )

[node name="TypeLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 18.0
margin_bottom = 13.0
text = "Type:"

[node name="ResourceTypeButton" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 67.0
margin_bottom = 18.0
text = "type"

[node name="QualityLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 13.0
text = "Quality:"

[node name="QualityButton" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 156.0
margin_bottom = 18.0
text = "quality"

[node name="AmountLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_top = 5.0
margin_right = 188.0
margin_bottom = 13.0
text = "Amount:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 278.0
margin_bottom = 18.0

[node name="AddResourceButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 298.0
margin_bottom = 18.0
text = "Add"

[node name="Clear Inventory" type="MarginContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 480.0
margin_bottom = 114.0
custom_constants/margin_top = 20

[node name="Button" type="Button" parent="VBoxContainer/Clear Inventory"]
margin_left = 208.0
margin_top = 20.0
margin_right = 272.0
margin_bottom = 34.0
size_flags_horizontal = 4
text = "Clear Inventory"

[connection signal="pressed" from="VBoxContainer/NavBar/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AddResourceButton" to="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" method="_on_AddResourceButton_pressed"]

[editable path="VBoxContainer/NavBar"]
